maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:65: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    else if (y < yMax && getIndication(x, y + 1) < getIndication(x, y) && !aMurNord()) {
                                                                                   ^